--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+   <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=qqktMfA7cGGZw0wb8uyYPkj95I6yW42X"></script>
     <title>demos</title>
   </head>
   <body>
