css and animteApi

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=qqktMfA7cGGZw0wb8uyYPkj95I6yW42X"></script>
+    <script type="text/javascript" src="static/lib/js/canvas-particle.js"></script>
     <title>demos</title>
   </head>
-  <body>
+  <body id="mydiv">
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <canvas width="400px" height="400px" style="position: fixed; top: 0; left: 0; z-index: -1;"></canvas>
   </body>
 </html>
