--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.js"></script>
+    <script src="https://cdn.bootcss.com/PrintArea/2.4.1/jquery.PrintArea.min.js"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=qqktMfA7cGGZw0wb8uyYPkj95I6yW42X"></script>
     <script type="text/javascript" src="static/lib/js/canvas-particle.js"></script>
     <title>demos</title>
