--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-   <meta charset="utf-8"/>
+<head>
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!--[if lte IE 8]>
+    <script src="static/lib/js/ieBetter.js"></script>
+    <![endif]-->
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.js"></script>
     <script src="https://cdn.bootcss.com/PrintArea/2.4.1/jquery.PrintArea.min.js"></script>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=qqktMfA7cGGZw0wb8uyYPkj95I6yW42X"></script>
+    <script type="text/javascript"
+            src="http://api.map.baidu.com/api?v=2.0&ak=qqktMfA7cGGZw0wb8uyYPkj95I6yW42X"></script>
     <script type="text/javascript" src="static/lib/js/canvas-particle.js"></script>
     <title>demos</title>
-  </head>
-  <body id="mydiv">
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <canvas width="400px" height="400px" style="position: fixed; top: 0; left: 0; z-index: -1;"></canvas>
-  </body>
+</head>
+<body id="mydiv">
+<div id="app"></div>
+<!-- built files will be auto injected -->
+<canvas width="400px" height="400px" style="position: fixed; top: 0; left: 0; z-index: -1;"></canvas>
+</body>
 </html>
